# recipe

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  README.md
cpp_examples/EASTL_playground/: .gitignore  CMakeLists.txt  README.md  main.cc
cpp_examples/FixedPoint64/: .gitignore  CMakeLists.txt  Fix64.cc  Fix64.h  ReadMe.md  cpptest.cc
cpp_examples/FixedPoint64/PythonLib/: Fix64Python.i  PyTest.py
cpp_examples/MSVC_DLL_Lib_Test/: CMakeLists.txt  README.md  foo.cc  foo.h  foo_2.cc  main.cc
cpp_examples/MSVC_DLL_Test/: CMakeLists.txt  MyClass.cc  MyClass.h  README.md  main.cc
cpp_examples/cpp_gbk_utf8_cvt/: CMakeLists.txt  README.md  detect_charset.hh  test_utf8.txt
cpp_examples/fixed_size_allocator/: CMakeLists.txt  FixedAllocator.cc  ReadMe.txt
cpp_examples/mesa_list_test/: CMakeLists.txt  list.h  main.cc
cpp_examples/swig_test/: .gitignore  CMakeLists.txt  main.cc  testLib.cc  testLib.h  testLib.i
cpp_examples/swig_test/LuaLib/: LuaTest.lua  testLibLua.i
cpp_examples/swig_test/PythonLib/: PyTest.py  testLibPython.i
cpp_examples/tagged_pointer/: CMakeLists.txt  main.cc
cpp_examples/v8_embedding/puertstest/: CMakeLists.txt  TestV8CallJs.cc  fib.js  fibtest.cc  helloworld.js  process.cc  puertsTest.cc  shell.cc  v8helloworld.cc
cpp_examples/v8_embedding/puertstest/ModuleLoadtest/: ReadMe.txt  lib.mjs  main.cpp  main.js
cpp_examples/v8_embedding/puertstest/puerts/include/: DataTransfer.h  Object.hpp  PesapiBackend.hpp  PesapiObject.hpp  StaticCall.hpp  V8Backend.hpp  V8Object.hpp
cpp_examples/v8_embedding/puertstest/puerts/src/: CppObjectMapper.cpp
cpp_gbk_utf8_cvt/: CMakeLists.txt  README.md  main.cc  test_big5.txt  test_gbk.txt
dx11/cpp-dx11/: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
dx11/cpp-dx11/cmake/: generate_header.cmake
dx11/cpp-dx11/common/: CMakeLists.txt  d3dApp.cc  d3dApp.hh  d3dUtils.cc  d3dUtils.hh  shapes.cc  shapes.hh  vertexLayout.cc  vertexLayout.hh
dx11/cpp-dx11/common/include/: freeCamera.hh  light.hh  material.hh  shapes.hh  texture.hh  vertexLayout.hh
dx11/cpp-dx11/common/src/: freeCamera.cc  material.cc  shapes.cc  texture.cc
dx11/cpp-dx11/src/: CMakeLists.txt
dx11/cpp-dx11/src/Dx11Init/: CMakeLists.txt  GameAPP.cc
dx11/cpp-dx11/src/FirstTriangle/: CMakeLists.txt  GameAPP.cc
dx11/cpp-dx11/src/Light/: CMakeLists.txt  GameAPP.cc
dx11/cpp-dx11/src/Light/HLSL/: Triangle.hlsli  Triangle_PS.hlsl  Triangle_VS.hlsl
dx11/cpp-dx11/src/MiniCube/: CMakeLists.txt  GameAPP.cc
dx11/cpp-dx11/src/MiniCube/HLSL/: Triangle.hlsli  Triangle_VS.hlsl  Triangle_VS_OpenGL.hlsl
dx11/cpp-dx11/src/glfwwindow/: CMakeLists.txt  dx11.cc  dx12.cc  example.cc
dx11/cpp-dx11/utils/: resource_path_searcher.cc  resource_path_searcher.h
dx12/: .clangd  .gitignore  CMakeLists.txt  GameTimer.cpp  GameTimer.h  InitDirect3DApp.cpp  d3dApp.cc  d3dApp.hh  d3dUtils.cc  d3dUtils.hh  defines.h  main.cpp  vcpkg.json
dx12/common/: CMakeLists.txt  CommonMesh.cc  CommonMesh.hh  EulerCamera.cc  EulerCamera.hh  GameTimer.cc  GameTimer.h  MeshGeometry.cc  MeshGeometry.hh  UploadBuffer.hh  Waves.cc  Waves.h  d3dApp.cc  d3dApp.hh  d3dUtils.cc  d3dUtils.hh
dx12/resources/textures/: .gitattributes
dx12/src/: CMakeLists.txt
dx12/src/BlendApp/: BlendApp.cc  CMakeLists.txt  FrameResource.h
dx12/src/BlendApp/Shaders/: color.hlsl  geometry_test.hlsl
dx12/src/BoxApp/: BoxApp.cc  CMakeLists.txt
dx12/src/BoxApp/Shaders/: color.hlsl
dx12/src/Crate/: CMakeLists.txt  Crate.cc  FrameResource.h
dx12/src/Crate/Shaders/: color.hlsl
dx12/src/Dx12Init/: CMakeLists.txt  InitDirect3DApp.cpp
dx12/src/DynamicCubeMap/: CMakeLists.txt  CubeRenderTarget.cc  CubeRenderTarget.h  DynamicCubeMap.cc  FrameResource.cc  FrameResource.h
dx12/src/DynamicCubeMap/Shaders/: LightingUtils.hlsl  color.hlsl  common.hlsl  skybox.hlsl
dx12/src/InstanceAndCulling/: CMakeLists.txt  FrameResource.cc  FrameResource.h  InstanceAndCulling.cc
dx12/src/InstanceAndCulling/Shaders/: color.hlsl
dx12/src/LandAndWaves/: CMakeLists.txt  FrameResource.cc  FrameResource.h  LandAndWaves.cc
dx12/src/LandAndWavesBlend/: BlurFilter.cc  BlurFilter.h  CMakeLists.txt  FrameResource.cc  FrameResource.h  LandAndWavesBlend.cc
dx12/src/LandAndWavesBlend/Shaders/: blur.hlsl  color.hlsl
dx12/src/LightColumns/: CMakeLists.txt  FrameResource.cc  FrameResource.h  LightColumns.cc
dx12/src/LightColumns/Shaders/: LightingUtils.hlsl  color.hlsl
dx12/src/LightColumnsDynamicIndex/: CMakeLists.txt  LightColumns.cc
dx12/src/LightColumnsDynamicIndex/Shaders/: color.hlsl
dx12/src/LightWaves/: CMakeLists.txt  FrameResource.cc  FrameResource.h  LightWaves.cc
dx12/src/LightWaves/Shaders/: LightingUtils.hlsl  color.hlsl
dx12/src/Shapes/: CMakeLists.txt  FrameResource.cc  FrameResource.h  Shapes.cc
dx12/src/Shapes/Shaders/: color.hlsl
dx12/src/StencilApp/: CMakeLists.txt  FrameResource.cc  FrameResource.h  StencilApp.cc
dx12/src/StencilApp/Shaders/: LightingUtils.hlsl  color.hlsl
dx12/utils/: cmake_vars.h.in
eigen3_numpy/eigen3/: CMakeLists.txt  import_eigen3.cmake  main.cc
lua_examples/lua_c_apis/: CMakeLists.txt
lua_examples/lua_c_apis/chapter27/: CMakeLists.txt  ex2701.cc  ex2702.cc
lua_examples/lua_c_apis/chapter28/: CMakeLists.txt  config.lua  ex2801.cc
lua_examples/lua_c_apis/chapter29/: CMakeLists.txt  ex29.lua  ex2901.cc  mylib.cc  mylib_test.lua
lua_examples/lua_c_apis/chapter30/: CMakeLists.txt  ex3001.cc  ex3001.lua
lua_examples/lua_c_apis/chapter31/: BitArray.cc  CMakeLists.txt  ex3101.cc  ex3101.lua
lua_examples/lua_c_apis/chapter32/: CMakeLists.txt  DirLib.cc  ex3201.cc  ex3201.lua
lua_examples/lua_c_apis/lib/: lua53c.lib
vulkan/: .clang-format  .gitignore  CMakeLists.txt  main.cc
vulkan/base/: CMakeLists.txt  VulkanExampleBase.cc  VulkanExampleBase.h  VulkanUtils.cc  VulkanUtils.hh
vulkan/cmake/: generate_header.cmake
vulkan/resources/shader/glsl/FirstTriangle/: compile.bat  shader.vert
vulkan/resources/shader/hlsl/FirstTriangle/: compile.bat  shader.hlsl
vulkan/src/FirstTriangle/: CMakeLists.txt  FirstTriangle.cc
(+192 files in other folders)
