add_subdirectory(Dx12Init)
add_subdirectory(BoxApp)
add_subdirectory(Shapes)
add_subdirectory(LandAndWaves)
add_subdirectory(LandAndWavesBlend)
add_subdirectory(LightWaves)
add_subdirectory(LightColumns)
add_subdirectory(LightColumnsDynamicIndex)
add_subdirectory(Crate)
add_subdirectory(BlendApp)
add_subdirectory(StencilApp)
add_subdirectory(InstanceAndCulling)