add_executable(glfw_test example.cc)
target_link_libraries(glfw_test glfw)
#target_include_directories(glfw_test PRIVATE "C:/Program Files (x86)/Microsoft DirectX SDK (June 2010)/Include")
#target_link_directories(glfw_test PRIVATE "C:/Program Files (x86)/Microsoft DirectX SDK (June 2010)/Lib/x64")
